Updated in version 0.9.2

--- a/MainActivity.html
+++ b/MainActivity.html
@@ -25,7 +25,7 @@
           <div class="col-12">
             <div class="mdl-shadow--2dp">
               <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">ShufflePaper 0.9.0</h2>
+                <h2 class="mdl-card__title-text">ShufflePaper 0.9.2</h2>
               </div>
               <div class="mdl-card__supporting-text">
                 Choose a folder with your backgroud images. These will then be set as your wallpaper according to your preferences below.
@@ -34,7 +34,7 @@
                 <div class="mdl-grid" style="padding: 0px !important">
                   <div class="mdl-cell mdl-cell--6-col" style="width: calc(75%); margin: 0px; display: flex; align-items: center">
                     <span></span>
-                    <div id="tv_chosen_folder" class="center-vertically"></div>
+                    <div id="tv_chosen_folder" class="center-vertically" style="display: none;"></div>
                   </div>
                   <div class="mdl-cell mdl-cell--2-col" style="width: calc(25%); margin: 0px">
                     <button id="btn_choose_folder" class="mdl-button nofocus mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" style="width: 100%; padding: 0">
@@ -44,7 +44,7 @@
                 </div>
               </div>
               <div class="mdl-card__menu">
-                <button id="btn_refresh" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+                <button id="btn_refresh" class="mdl-button nofocus mdl-button--icon mdl-js-button mdl-js-ripple-effect">
                   <i class="material-icons">autorenew</i>
                 </button>
               </div>
