--- a/MainActivity.html
+++ b/MainActivity.html
@@ -40,7 +40,7 @@
             <div class="mdl-layout__header-row">
                 <!-- Title + Spacer -->
                 <span class="mdl-layout-title">
-                    <div class="i18n" data-id="app_name"></div>
+                    <div class="i18n" data-id="app_short_name"></div>
                 </span>
                 <div class="mdl-layout-spacer"></div>
 
@@ -312,7 +312,7 @@
                             <!-- <div class="logo text-emphasis-high">ShadyVault<span class="version">${version}</span>
                                 </div> -->
                             <div>
-                                <span class="logo text-emphasis-high i18n" data-id="app_name">
+                                <span class="logo text-emphasis-high i18n" data-id="app_short_name">
                                 </span>
                                 <span id="placeholderInsertVersion" class="version"></span>
                             </div>
